# python-ci-sandbox

./: README.md  pyproject.toml
ci/: azpipeline.yaml  pypkg-pipeline.yaml
ci/conda/: poetry-bootstrap-env.yaml
ci/templates/: job_A.yaml  job_B.yaml
ci/templates/jobs/: poetry-bootstrap.yml
ci/templates/steps/: conda-run.yaml  report-env-vars.yaml
ci_sandbox/: __init__.py
ci_sandbox/tests/: test_main.py
