[tool.poetry]
name = "python-ci-sandbox"
version = "0.0.0"
description = "Lightweight project to exercise CI automation strategies"
authors = ["Alex Corrie <ajccode@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ci_sandbox"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
packaging = "^21.3"
pytest = "^7.1.2"
pytest-azurepipelines = "^1.0.3"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.4.4"}

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
